5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1715_3035.log
== TEST (2019-05-02 16:41:08) 
-- CODE:
from math import radians()
x = float(input('Digite um valor: '))

if (x>=0° and x<90° or x<=180° and x<270°):
	print(sin(x)radians())
	#if(x>=)
-- ERROR:
File "XXXX", line 1
    from math import radians()
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:20) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0° and x<90° or x<=180° and x<270°):
	print(sin(x)radians())
	#if(x>=)
-- ERROR:
File "XXXX", line 4
    if (x>=0° and x<90° or x<=180° and x<270°):
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:37) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x<=180 and x<270):
	print(sin(x)radians())
	#if(x>=)
-- ERROR:
File "XXXX", line 5
    print(sin(x)radians())
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:49) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x<=180 and x<270):
	print(sin(x).radians())
	#if(x>=)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(sin(x).radians())
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:51) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>15.0=180 and x<270):
	print(sin(x).radians())
	#if(x>=)
-- ERROR:
File "XXXX", line 4
    if (x>=0 and x<90 or x>15.0=180 and x<270):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:54) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>15.0=180 and x<270):
	print(sin(x).radians())
	#if(x>=)
-- ERROR:
File "XXXX", line 4
    if (x>=0 and x<90 or x>15.0=180 and x<270):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:05) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(sin(x).radians())
	#if(x>=)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(sin(x).radians())
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:31) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(sin(x)).radians()
	#if(x>=)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(sin(x)).radians()
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:03) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(round(sin(x), 4)).radians()
	#if(x>=)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(sin(x), 4)).radians()
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:25) 
-- CODE:
from math import radians
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(round(sin(x), 4))
	#if(x>=)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(sin(x), 4))
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:05) 
-- CODE:
from math import 
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(round(sin(x), 4))
	#if(x>=)
-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:05) 
-- CODE:
from math import 
x = float(input('Digite um valor: '))

if (x>=0 and x<90 or x>=180 and x<270):
	print(round(sin(x), 4))
	#if(x>=)
-- ERROR:
File "XXXX", line 1
    from math import 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
